# pdf-manager

./: .coverage  .env  .gitignore  .pre-commit-config.yaml  Dockerfile.backend  Dockerfile.frontend  README.md  dev.sh  docker-compose.yml  docker.sh  exported.xlsx  jest.config.js  package-lock.json  package.json  project_setup.sh  pyproject.toml  requirements.txt  run.sh  setup.py  setup_environment.sh  test_api.sh  test_compression.py  test_pdf.py  test_pdf_operations.py  tsconfig.json
app/: main.py
app/api/: deps.py
app/api/endpoints/: auth.py  pdf.py
app/api/routes/: __init__.py  auth.py  pdf.py
app/api/versions/: __init__.py
app/core/: config.py  security.py
app/middleware/: logging.py
app/models/: pdf.py  plagiarism.py
app/schemas/: auth.py  pdf.py
app/services/: auth_service.py  pdf_service.py  plagiarism_service.py
app/tests/: test_pdf_service.py
app/tests/data/: test.py
app/utils/: logger.py
data/: encryption_keys.json
frontend/: .env  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .prettierignore  .prettierrc  index.html  jest.config.js  jest.setup.js  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/: index.html
frontend/src/: App.tsx  index.css  index.tsx  main.tsx  setupTests.ts
frontend/src/components/: CompressPDFDialog.tsx  EditPDFDialog.tsx  ExportPDFDialog.tsx  FilePickerDialog.tsx  FileUpload.tsx  Footer.tsx  Header.tsx  (+6 more)
scripts/: create_test_pdfs.py  generate_pdfs.sh
tests/: test_pdf_service.py  test_pdf_workflow.py  test_plagiarism_service.py
(+25 files in other folders)
